syntax = "proto3";

package xmux.forum.v4;

option java_package = "io.xdea.xmux.forum.dto";
option java_outer_classname = "ForumGrpcApi";

import "validate/validate.proto";

message GetForumsReq {
  int32 from = 1;
  int32 count = 2;
}

message GetForumsResp {
  repeated ForumDetail forums = 1;
}

message ForumDetail {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string creatorUid = 4;
}
